--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -90,7 +90,7 @@
                 <div class="card">
                     <article class="card-group-item">
                         <header class="card-header">
-                            <h6 class="title reference-filter-title">Author</h6>
+                            <h6 class="title reference-filter-title">Author(s)</h6>
                         </header>
                         <div class="filter-content">
                             <div class="card-body" data-filter="type">
