Show GBIF data source description

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -278,7 +278,7 @@
 
 
 <script type="text/html" id="source-collection-template">
-        <div class="study-reference-wrapper">
+        <div class="source-collection-wrapper">
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
                      DATA SOURCES <i
