Add record number in taxa management

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -235,6 +235,10 @@
                         <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="endemism__name"></i>
                         <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-endemism__name"></i>
                     </th>
+                    <th scope="col" style="width: 20%">Records
+                        <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="total_records"></i>
+                        <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-total_records"></i>
+                    </th>
                     <th scope="col" style="width: 15%">Import date
                         <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="import_date"></i>
                         <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-import_date"></i>
