Fix total records for species

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -140,7 +140,9 @@
         }
 
     </style>
-
+    <script>
+        const sourceCollection = {{ source_collections | safe }};
+    </script>
 {% endblock %}
 
 {% block body_content %}
