--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -472,7 +472,7 @@
                         </button>
                     </div>
                     <div class="card-body card-padding">
-                        <div class="content-body">
+                        <div id="occurrence-data" class="content-body">
                         </div>
 
                     </div>
@@ -732,11 +732,11 @@
                             Metadata Table
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="metadata-table-list">
+                                data-datac="metadata-table-list" data-title="Metadata Table">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div class="card-body card-padding">
+                    <div id= "metadata-table-list" class="card-body card-padding">
                         <table class="table table-hover custom-table content-body">
                         </table>
                     </div>
