add non validated location site

--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -155,6 +155,7 @@
                                 <a class="dropdown-item" href="/taxa-management/">Taxon Management</a>
                                 <a class="dropdown-item" href="/download-request/">Download Requests</a>
                                 <a class="dropdown-item" href="/nonvalidated-list/">Validate Records</a>
+                                <a class="dropdown-item" href="/nonvalidated-site/">Validate Sites</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
                                 <a class="dropdown-item" href="/cms">Wagtail Admin</a>
