change add a site base map

--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -23,6 +23,7 @@
         const allowToEdit = {% if update %}{% if allow_to_edit %}true{% else %}false{% endif %}{% else %}true{% endif %};
         const siteId = '{{ site_id }}';
         const siteCodeGeneratorMethod = '{{ preferences.SiteSetting.site_code_generator }}';
+        const bingKey = '{{ bing_key }}';
 
     </script>
     <style>
