--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -66,6 +66,7 @@
         const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
         const emptyWMSSiteParameter = '{{ bims_preferences.empty_location_site_cluster }}';
         const isStaff = {% if user.is_superuser or user.is_staff %} true {% else %} false {% endif %};
+        const isSuperUser = {% if user.is_superuser %} true {% else %} false {% endif %};
         const mapDefaultSelectedFilters = "{{ preferences.SiteSetting.map_default_filters | safe }}";
         const spatialFilterLayerStyle = '{{ preferences.SiteSetting.spatial_filter_layer_style }}';
         const defaultCenterMap = '{{ preferences.SiteSetting.default_center_map }}';
