--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -280,7 +280,7 @@
                                     <div class="form-group row">
                                         <label for="parentTaxa" class="col-sm-2 col-form-label">Parent Taxonomy</label>
                                         <div class="col-sm-10">
-                                            <select class="taxa-auto-complete" style="width: 100%"></select>
+                                            <select id="taxa-auto-complete" class="taxa-auto-complete" style="width: 100%"></select>
                                         </div>
                                     </div>
                                 </div>
