--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -150,6 +150,9 @@
         .select2-selection__choice, .select2-results__options {
             font-size: 0.8em !important;
         }
+        .select2-results__option {
+            width: 100%;
+        }
     </style>
     <script>
         const sourceCollection = {{ source_collections | safe }};
@@ -272,6 +275,12 @@
                                                     <option value="{{ endemism }}">{{ endemism }}</option>
                                                 {% endfor %}
                                             </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="parentTaxa" class="col-sm-2 col-form-label">Parent Taxonomy</label>
+                                        <div class="col-sm-10">
+                                            <select id="taxa-auto-complete" class="taxa-auto-complete" style="width: 100%"></select>
                                         </div>
                                     </div>
                                 </div>
